# COC

./: pyproject.toml  window_build.ps1
src/coc/: ControlPanel.py  Control_pannel.py  OCRLoader.py  OCRWorker.py  SnippingWidget.py  main.py
