[project]
name = "coc"
version = "0.1.0"
description = ""
authors = [
    {name = "Sungwoon Choi",email = "suchoi9709@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "numpy (>=2.2,<2.3.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)"
]

[tool.poetry]
packages = [{include = "coc", from = "src"}]


[tool.poetry.scripts]
coc = "coc.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
